# EBS_Snapshot_CLI_APP

./: .bandit  .env  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  backup.py  cli.py  dev.sh  logger.py  pyproject.toml  pytest.ini  requirements.txt  restore.py  t.py  test.py  utils.py  webapp.py
.github/workflows/: bandit.yml  build.yml  deploy.yml  gitleaks.yml  python_lint.yml  python_test.yml  security.yml  sonarqube.yml
src/application/: __init__.py  validation.py
src/application/dtos/: __init__.py
src/application/use_cases/: __init__.py  test_use_cases.py
src/domain/: __init__.py  entities_enhanced.py  events.py  exceptions.py  value_objects.py
src/domain/entities/: __init__.py  test_entities.py
src/domain/repositories/: __init__.py
src/domain/services/: __init__.py  test_services.py
src/infrastructure/: __init__.py
src/infrastructure/aws/: __init__.py  test_aws_repositories.py
src/infrastructure/config/: __init__.py  models.py
src/infrastructure/logging/: __init__.py
src/presentation/cli/: application.py  main.py  menu.py
src/presentation/cli/commands/: __init__.py  base.py  create_snapshot.py  delete_snapshot.py  list_snapshots.py  restore_snapshot.py
tests/: test_backup.py  test_cli.py  test_integration.py  test_restore.py  test_utils.py
tests/integration/: test_aws_repositories.py
tests/unit/: test_entities.py  test_services.py  test_use_cases.py
webapp/: __init__.py  backup.py  export.py  iam.py  list_snapshots.py  main.py  restore.py  scheduler.py  settings.py
